--- a/src/app/avaliation/CardioPulmunar/cureton/cureton.component.html
+++ b/src/app/avaliation/CardioPulmunar/cureton/cureton.component.html
@@ -34,18 +34,19 @@
                             <td *ngIf="editPointer==1 && editAv">
                                 <input mask="00:00" name="c_tempo" #c_tempo="ngModel"
                                     [(ngModel)]="newEvaluation.c_tempo" (focus)="$event.target.select()"
-                                    [showMaskTyped]="true">
+                                    [showMaskTyped]="true" cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                             <td *ngIf="pointer>=0 && editPointer!=0">{{evaluation[pointer].c_tempo | mask: '00:00'}}
                             </td>
                             <td *ngIf="editPointer==0 && editAv">
                                 <input mask="00:00" name="c_tempo" #c_tempo="ngModel"
                                     [(ngModel)]="newEvaluation.c_tempo" (focus)="$event.target.select()"
-                                    [showMaskTyped]="true">
+                                    [showMaskTyped]="true" cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                             <td *ngIf="addEval">
                                 <input mask="00:00" name="c_tempo" #c_tempo="ngModel"
-                                    [(ngModel)]="newEvaluation.c_tempo" [showMaskTyped]="true">
+                                    [(ngModel)]="newEvaluation.c_tempo" [showMaskTyped]="true"
+                                    cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                         </tr>
                         <tr>
