--- a/src/app/avaliation/CardioPulmunar/balke-ware/balke-ware.component.html
+++ b/src/app/avaliation/CardioPulmunar/balke-ware/balke-ware.component.html
@@ -30,14 +30,16 @@
                         <th i18n><span (click)="openDialog('Carga Teste')">Carga Teste <small>(Watt)</small></span></th>
                         <td *ngIf="pointer>=1 && !addEval && editPointer!=1">{{evaluation[pointer-1].carga | number: '': locale}}</td>
                         <td *ngIf="editPointer==1 && editAv">
-                            <input name="carga" #carga="ngModel" [(ngModel)]="newEvaluation.carga" type="number" (focus)="$event.target.select()">
+                            <input name="carga" #carga="ngModel" [(ngModel)]="newEvaluation.carga" type="number" (focus)="$event.target.select()"
+                             cdkTrapFocus cdkTrapFocusAutoCapture>
                         </td>
                         <td *ngIf="pointer>=0 && editPointer!=0">{{evaluation[pointer].carga | number: '': locale}}</td>
                         <td *ngIf="editPointer==0 && editAv">
-                            <input name="carga" #carga="ngModel" [(ngModel)]="newEvaluation.carga" type="number" (focus)="$event.target.select()">
+                            <input name="carga" #carga="ngModel" [(ngModel)]="newEvaluation.carga" type="number" (focus)="$event.target.select()"
+                             cdkTrapFocus cdkTrapFocusAutoCapture>
                         </td>
                         <td *ngIf="addEval">
-                            <input name="carga" #carga="ngModel" [(ngModel)]="newEvaluation.carga" type="number">
+                            <input name="carga" #carga="ngModel" [(ngModel)]="newEvaluation.carga" type="number" cdkTrapFocus cdkTrapFocusAutoCapture>
                         </td>
                     </tr>
                     <tr>
