--- a/src/app/avaliation/CardioPulmunar/banco/banco.component.html
+++ b/src/app/avaliation/CardioPulmunar/banco/banco.component.html
@@ -40,14 +40,16 @@
                         <th i18n>FC final</th>
                         <td *ngIf="pointer>=1 && !addEval && editPointer!=1">{{evaluation[pointer-1].fc | number: '': locale}}</td>
                         <td *ngIf="editPointer==1 && editAv">
-                            <input name="fc" #fc="ngModel" [(ngModel)]="newEvaluation.fc" type="number" (focus)="$event.target.select()">
+                            <input name="fc" #fc="ngModel" [(ngModel)]="newEvaluation.fc" type="number" (focus)="$event.target.select()"
+                             cdkTrapFocus cdkTrapFocusAutoCapture>
                         </td>
                         <td *ngIf="pointer>=0 && editPointer!=0">{{evaluation[pointer].fc | number: '': locale}}</td>
                         <td *ngIf="editPointer==0 && editAv">
-                            <input name="fc" #fc="ngModel" [(ngModel)]="newEvaluation.fc" type="number" (focus)="$event.target.select()">
+                            <input name="fc" #fc="ngModel" [(ngModel)]="newEvaluation.fc" type="number" (focus)="$event.target.select()"
+                             cdkTrapFocus cdkTrapFocusAutoCapture>
                         </td>
                         <td *ngIf="addEval">
-                            <input  name="fc" #fc="ngModel" [(ngModel)]="newEvaluation.fc" type="number">
+                            <input  name="fc" #fc="ngModel" [(ngModel)]="newEvaluation.fc" type="number" cdkTrapFocus cdkTrapFocusAutoCapture>
                         </td>
                     </tr>
                     <tr>
