--- a/src/app/avaliation/CardioPulmunar/george/george.component.html
+++ b/src/app/avaliation/CardioPulmunar/george/george.component.html
@@ -35,18 +35,19 @@
                             <td *ngIf="editPointer==1 && editAv">
                                 <input name="c_tempo" mask="00:00" #c_tempo="ngModel"
                                     [(ngModel)]="newEvaluation.c_tempo" [showMaskTyped] = "true"
-                                    (focus)="$event.target.select()">
+                                    (focus)="$event.target.select()" cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                             <td *ngIf="pointer>=0 && editPointer!=0">{{evaluation[pointer].c_tempo | mask: '00:00'}}
                             </td>
                             <td *ngIf="editPointer==0 && editAv">
                                 <input name="c_tempo" mask="00:00" #c_tempo="ngModel"
                                     [(ngModel)]="newEvaluation.c_tempo" [showMaskTyped] = "true"
-                                    (focus)="$event.target.select()">
+                                    (focus)="$event.target.select()" cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                             <td *ngIf="addEval">
                                 <input name="c_tempo" mask="00:00" #c_tempo="ngModel"
-                                    [(ngModel)]="newEvaluation.c_tempo" [showMaskTyped] = "true">
+                                    [(ngModel)]="newEvaluation.c_tempo" [showMaskTyped] = "true"
+                                    cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                         </tr>
                         <tr>
