--- a/src/app/avaliation/CardioPulmunar/george2/george2.component.html
+++ b/src/app/avaliation/CardioPulmunar/george2/george2.component.html
@@ -31,14 +31,16 @@
                         <th i18n>Velocidade <small>(Km/h)</small></th>
                         <td *ngIf="pointer>=1 && !addEval && editPointer!=1">{{evaluation[pointer-1].c_vm | number: '': locale}}</td>
                         <td *ngIf="editPointer==1 && editAv">
-                            <input name="c_vm" #c_vm="ngModel" [(ngModel)]="newEvaluation.c_vm" type="number" (focus)="$event.target.select()">
+                            <input name="c_vm" #c_vm="ngModel" [(ngModel)]="newEvaluation.c_vm" type="number" (focus)="$event.target.select()"
+                             cdkTrapFocus cdkTrapFocusAutoCapture>
                         </td>
                         <td *ngIf="pointer>=0 && editPointer!=0">{{evaluation[pointer].c_vm | number: '': locale}}</td>
                         <td *ngIf="editPointer==0 && editAv">
-                            <input name="c_vm" #c_vm="ngModel" [(ngModel)]="newEvaluation.c_vm" type="number" (focus)="$event.target.select()">
+                            <input name="c_vm" #c_vm="ngModel" [(ngModel)]="newEvaluation.c_vm" type="number" (focus)="$event.target.select()"
+                             cdkTrapFocus cdkTrapFocusAutoCapture>
                         </td>
                         <td *ngIf="addEval">
-                            <input name="c_vm" #c_vm="ngModel" [(ngModel)]="newEvaluation.c_vm" type="number">
+                            <input name="c_vm" #c_vm="ngModel" [(ngModel)]="newEvaluation.c_vm" type="number" cdkTrapFocus cdkTrapFocusAutoCapture>
                         </td>
                     </tr>
                     <tr>
