--- a/src/app/avaliation/CardioPulmunar/natacao/natacao.component.html
+++ b/src/app/avaliation/CardioPulmunar/natacao/natacao.component.html
@@ -29,17 +29,17 @@
                                 {{evaluation[pointer-1].distancia | number: '': locale}}</td>
                             <td *ngIf="editPointer==1 && editAv">
                                 <input name="distancia" #distancia="ngModel" [(ngModel)]="newEvaluation.distancia"
-                                    type="number" (focus)="$event.target.select()">
+                                    type="number" (focus)="$event.target.select()" cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                             <td *ngIf="pointer>=0 && editPointer!=0">
                                 {{evaluation[pointer].distancia | number: '': locale}}</td>
                             <td *ngIf="editPointer==0 && editAv">
                                 <input name="distancia" #distancia="ngModel" [(ngModel)]="newEvaluation.distancia"
-                                    type="number" (focus)="$event.target.select()">
+                                    type="number" (focus)="$event.target.select()" cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                             <td *ngIf="addEval">
                                 <input name="distancia" #distancia="ngModel" [(ngModel)]="newEvaluation.distancia"
-                                    type="number">
+                                    type="number" cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                         </tr>
                         <tr>
