--- a/src/app/avaliation/CardioPulmunar/ymca-banco/ymca-banco.component.html
+++ b/src/app/avaliation/CardioPulmunar/ymca-banco/ymca-banco.component.html
@@ -43,16 +43,17 @@
                                 {{evaluation[pointer-1].fc | number: '': locale}}</td>
                             <td *ngIf="editPointer==1 && editAv">
                                 <input name="fc" #fc="ngModel" [(ngModel)]="newEvaluation.fc" type="number"
-                                    (focus)="$event.target.select()">
+                                    (focus)="$event.target.select()" cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                             <td *ngIf="pointer>=0 && editPointer!=0">{{evaluation[pointer].fc | number: '': locale}}
                             </td>
                             <td *ngIf="editPointer==0 && editAv">
                                 <input name="fc" #fc="ngModel" [(ngModel)]="newEvaluation.fc" type="number"
-                                    (focus)="$event.target.select()">
+                                    (focus)="$event.target.select()" cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                             <td *ngIf="addEval">
-                                <input name="fc" #fc="ngModel" [(ngModel)]="newEvaluation.fc" type="number">
+                                <input name="fc" #fc="ngModel" [(ngModel)]="newEvaluation.fc" type="number"
+                                cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                         </tr>
                         <tr>
