--- a/src/app/avaliation/CardioPulmunar/ymca/ymca.component.html
+++ b/src/app/avaliation/CardioPulmunar/ymca/ymca.component.html
@@ -30,14 +30,16 @@
                         <th i18n>FC com 25W</th>
                         <td *ngIf="pointer>=1 && !addEval && editPointer!=1">{{evaluation[pointer-1].min0 | number: '': locale}}</td>
                         <td *ngIf="editPointer==1 && editAv">
-                            <input name="min0" #min0="ngModel" [(ngModel)]="newEvaluation.min0" type="number" (focus)="$event.target.select()">
+                            <input name="min0" #min0="ngModel" [(ngModel)]="newEvaluation.min0" type="number" (focus)="$event.target.select()"
+                             cdkTrapFocus cdkTrapFocusAutoCapture>
                         </td>
                         <td *ngIf="pointer>=0 && editPointer!=0">{{evaluation[pointer].min0 | number: '': locale}}</td>
                         <td *ngIf="editPointer==0 && editAv">
-                            <input name="min0" #min0="ngModel" [(ngModel)]="newEvaluation.min0" type="number" (focus)="$event.target.select()">
+                            <input name="min0" #min0="ngModel" [(ngModel)]="newEvaluation.min0" type="number" (focus)="$event.target.select()"
+                             cdkTrapFocus cdkTrapFocusAutoCapture>
                         </td>
                         <td *ngIf="addEval">
-                            <input name="min0" #min0="ngModel" [(ngModel)]="newEvaluation.min0" type="number">
+                            <input name="min0" #min0="ngModel" [(ngModel)]="newEvaluation.min0" type="number" cdkTrapFocus cdkTrapFocusAutoCapture>
                         </td>
                     </tr>
                     <tr>
