--- a/src/app/avaliation/antropometria/tran-weltman/tran-weltman.component.html
+++ b/src/app/avaliation/antropometria/tran-weltman/tran-weltman.component.html
@@ -37,17 +37,17 @@
                                 {{evaluation[pointer-1].abdomen2 | number: '': locale}}</td>
                             <td *ngIf="editPointer==1 && editAv">
                                 <input name="abdomen2" #abdomen2="ngModel" [(ngModel)]="newEvaluation.abdomen2"
-                                    type="number" (focus)="$event.target.select()">
+                                    type="number" (focus)="$event.target.select()" cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                             <td *ngIf="pointer>=0 && editPointer!=0">
                                 {{evaluation[pointer].abdomen2 | number: '': locale}}</td>
                             <td *ngIf="editPointer==0 && editAv">
                                 <input name="abdomen2" #abdomen2="ngModel" [(ngModel)]="newEvaluation.abdomen2"
-                                    type="number" (focus)="$event.target.select()">
+                                    type="number" (focus)="$event.target.select()" cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                             <td *ngIf="addEval">
                                 <input name="abdomen2" #abdomen2="ngModel" [(ngModel)]="newEvaluation.abdomen2"
-                                    type="number">
+                                    type="number" cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                         </tr>
                         <tr>
