--- a/src/app/avaliation/antropometria/vogel/vogel.component.html
+++ b/src/app/avaliation/antropometria/vogel/vogel.component.html
@@ -36,17 +36,19 @@
                                 {{evaluation[pointer-1].pescoco | number: '': locale}}</td>
                             <td *ngIf="editPointer==1 && editAv">
                                 <input name="pescoco" #pescoco="ngModel" [(ngModel)]="newEvaluation.pescoco"
-                                    type="number" (focus)="$event.target.select()">
+                                    type="number" (focus)="$event.target.select()"
+                                    cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                             <td *ngIf="pointer>=0 && editPointer!=0">
                                 {{evaluation[pointer].pescoco | number: '': locale}}</td>
                             <td *ngIf="editPointer==0 && editAv">
                                 <input name="pescoco" #pescoco="ngModel" [(ngModel)]="newEvaluation.pescoco"
-                                    type="number" (focus)="$event.target.select()">
+                                    type="number" (focus)="$event.target.select()"
+                                    cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                             <td *ngIf="addEval">
                                 <input name="pescoco" #pescoco="ngModel" [(ngModel)]="newEvaluation.pescoco"
-                                    type="number">
+                                    type="number" cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                         </tr>
                         <tr>
