--- a/src/app/avaliation/antropometria/weltman-et-al/weltman-et-al.component.html
+++ b/src/app/avaliation/antropometria/weltman-et-al/weltman-et-al.component.html
@@ -57,17 +57,19 @@
                                 {{evaluation[pointer-1].abdomen | number: '': locale}}</td>
                             <td *ngIf="editPointer==1 && editAv">
                                 <input name="abdomen" #abdomen="ngModel" [(ngModel)]="newEvaluation.abdomen"
-                                    type="number" (focus)="$event.target.select()">
+                                    type="number" (focus)="$event.target.select()"
+                                    cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                             <td *ngIf="pointer>=0 && editPointer!=0">
                                 {{evaluation[pointer].abdomen | number: '': locale}}</td>
                             <td *ngIf="editPointer==0 && editAv">
                                 <input name="abdomen" #abdomen="ngModel" [(ngModel)]="newEvaluation.abdomen"
-                                    type="number" (focus)="$event.target.select()">
+                                    type="number" (focus)="$event.target.select()"
+                                    cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                             <td *ngIf="addEval">
                                 <input name="abdomen" #abdomen="ngModel" [(ngModel)]="newEvaluation.abdomen"
-                                    type="number">
+                                    type="number" cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                         </tr>
 
