--- a/src/app/avaliation/composicao-corporal/balanca/balanca.component.html
+++ b/src/app/avaliation/composicao-corporal/balanca/balanca.component.html
@@ -32,16 +32,17 @@
                                 {{evaluation[pointer-1].peso | number: '': locale}}</td>
                             <td *ngIf="editPointer==1 && editAv">
                                 <input name="peso" #peso="ngModel" [(ngModel)]="newEvaluation.peso" type="number"
-                                    (focus)="$event.target.select()">
+                                    (focus)="$event.target.select()" cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                             <td *ngIf="pointer>=0 && editPointer!=0">{{evaluation[pointer].peso | number: '': locale}}
                             </td>
                             <td *ngIf="editPointer==0 && editAv">
                                 <input name="peso" #peso="ngModel" [(ngModel)]="newEvaluation.peso" type="number"
-                                    (focus)="$event.target.select()">
+                                    (focus)="$event.target.select()" cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                             <td *ngIf="addEval">
-                                <input name="peso" #peso="ngModel" [(ngModel)]="newEvaluation.peso" type="number">
+                                <input name="peso" #peso="ngModel" [(ngModel)]="newEvaluation.peso" type="number"
+                                cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                         </tr>
                         <tr>
