--- a/src/app/avaliation/dobras/all-dobras/all-dobras.component.html
+++ b/src/app/avaliation/dobras/all-dobras/all-dobras.component.html
@@ -35,19 +35,21 @@
                                 {{evaluation[pointer-1].abdominal | number: '': locale}}</td>
                             <td *ngIf="editPointer==1 && editAv">
                                 <input name="abdominal" #abdominal="ngModel" [(ngModel)]="newEvaluation.abdominal"
-                                    type="number" (focus)="$event.target.select()">
+                                    type="number" (focus)="$event.target.select()" cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                             <td *ngIf="pointer>=0 && editPointer!=0">
                                 {{evaluation[pointer].abdominal | number: '': locale}}</td>
                             <td *ngIf="editPointer==0 && editAv">
                                 <input name="abdominal" #abdominal="ngModel" [(ngModel)]="newEvaluation.abdominal"
-                                    type="number" (focus)="$event.target.select()">
+                                    type="number" (focus)="$event.target.select()" cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                             <td *ngIf="addEval">
                                 <input name="abdominal" #abdominal="ngModel" [(ngModel)]="newEvaluation.abdominal"
-                                    type="number" (change)="getSomatorio()" (focus)="$event.target.select()">
+                                    type="number" (change)="getSomatorio()" (focus)="$event.target.select()"
+                                    cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                         </tr>
+                        
                         <tr>
                             <th i18n><span (click)="openDialog('Axilar')">Axilar</span></th>
                             <td *ngIf="pointer>=1 && !addEval && editPointer!=1">
