--- a/src/app/avaliation/dobras/guedes/guedes.component.html
+++ b/src/app/avaliation/dobras/guedes/guedes.component.html
@@ -36,17 +36,20 @@
                                 {{evaluation[pointer-1].triciptal | number: '': locale}}</td>
                             <td *ngIf="editPointer==1 && editAv">
                                 <input name="triciptal" #triciptal="ngModel" [(ngModel)]="newEvaluation.triciptal"
-                                    type="number" (focus)="$event.target.select()">
+                                    type="number" (focus)="$event.target.select()"
+                                     cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                             <td *ngIf="pointer>=0 && editPointer!=0">
                                 {{evaluation[pointer].triciptal | number: '': locale}}</td>
                             <td *ngIf="editPointer==0 && editAv">
                                 <input name="triciptal" #triciptal="ngModel" [(ngModel)]="newEvaluation.triciptal"
-                                    type="number" (focus)="$event.target.select()">
+                                    type="number" (focus)="$event.target.select()"
+                                     cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                             <td *ngIf="addEval">
                                 <input name="triciptal" #triciptal="ngModel" [(ngModel)]="newEvaluation.triciptal"
-                                    type="number" (change)="getSomatorio()" (focus)="$event.target.select()">
+                                    type="number" (change)="getSomatorio()" (focus)="$event.target.select()"
+                                     cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                         </tr>
                         <tr *ngIf="sexo=='F'">
@@ -56,19 +59,19 @@
                             <td *ngIf="editPointer==1 && editAv">
                                 <input name="subescapular" #subescapular="ngModel"
                                     [(ngModel)]="newEvaluation.subescapular" type="number"
-                                    (focus)="$event.target.select()">
+                                    (focus)="$event.target.select()" cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                             <td *ngIf="pointer>=0 && editPointer!=0">
                                 {{evaluation[pointer].subescapular | number: '': locale}}</td>
                             <td *ngIf="editPointer==0 && editAv">
                                 <input name="subescapular" #subescapular="ngModel"
                                     [(ngModel)]="newEvaluation.subescapular" type="number"
-                                    (focus)="$event.target.select()">
+                                    (focus)="$event.target.select()" cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                             <td *ngIf="addEval">
                                 <input name="subescapular" #subescapular="ngModel"
                                     [(ngModel)]="newEvaluation.subescapular" type="number"
-                                     (change)="getSomatorio()" (focus)="$event.target.select()">
+                                     (change)="getSomatorio()" (focus)="$event.target.select()" cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                         </tr>
                         <tr>
