--- a/src/app/avaliation/dobras/sloan/sloan.component.html
+++ b/src/app/avaliation/dobras/sloan/sloan.component.html
@@ -36,18 +36,18 @@
                                 {{evaluation[pointer-1].subescapular | number: '': locale}}</td>
                             <td *ngIf="editPointer==1 && editAv">
                                 <input name="biciptal" #biciptal="ngModel" [(ngModel)]="newEvaluation.biciptal"
-                                    type="number" (focus)="$event.target.select()">
+                                    type="number" (focus)="$event.target.select()" cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                             <td *ngIf="pointer>=0 && editPointer!=0">
                                 {{evaluation[pointer].subescapular | number: '': locale}}</td>
                             <td *ngIf="editPointer==0 && editAv">
                                 <input name="biciptal" #biciptal="ngModel" [(ngModel)]="newEvaluation.biciptal"
-                                    type="number" (focus)="$event.target.select()">
+                                    type="number" (focus)="$event.target.select()" cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                             <td *ngIf="addEval">
                                 <input class="hidde-arrows" name="subescapular" #subescapular="ngModel"
                                     [(ngModel)]="newEvaluation.subescapular" type="number"
-                                    (change)="getSomatorio()" (focus)="$event.target.select()">
+                                    (change)="getSomatorio()" (focus)="$event.target.select()" cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                         </tr>
                         <tr *ngIf="sexo=='F'">
@@ -56,18 +56,18 @@
                                 {{evaluation[pointer-1].triciptal | number: '': locale}}</td>
                             <td *ngIf="editPointer==1 && editAv">
                                 <input name="biciptal" #biciptal="ngModel" [(ngModel)]="newEvaluation.biciptal"
-                                    type="number" (focus)="$event.target.select()">
+                                    type="number" (focus)="$event.target.select()" cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                             <td *ngIf="pointer>=0 && editPointer!=0">
                                 {{evaluation[pointer].triciptal | number: '': locale}}</td>
                             <td *ngIf="editPointer==0 && editAv">
                                 <input name="biciptal" #biciptal="ngModel" [(ngModel)]="newEvaluation.biciptal"
-                                    type="number" (focus)="$event.target.select()">
+                                    type="number" (focus)="$event.target.select()" cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                             <td *ngIf="addEval">
                                 <input class="hidde-arrows" name="triciptal" #tricipital="ngModel"
                                     [(ngModel)]="newEvaluation.triciptal" type="number"
-                                    (change)="getSomatorio()" (focus)="$event.target.select()">
+                                    (change)="getSomatorio()" (focus)="$event.target.select()" cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                         </tr>
                         <tr *ngIf="sexo=='M'">
