--- a/src/app/avaliation/dobras/will/will.component.html
+++ b/src/app/avaliation/dobras/will/will.component.html
@@ -33,15 +33,18 @@
                         <th i18n><span (click)="openHelpDialog('Triciptal')">Triciptal</span></th>
                         <td *ngIf="pointer>=1 && !addEval && editPointer!=1">{{evaluation[pointer-1].triciptal | number: '': locale}}</td>
                         <td *ngIf="editPointer==1 && editAv">
-                            <input name="triciptal" #triciptal="ngModel" [(ngModel)]="newEvaluation.triciptal" type="number" (focus)="$event.target.select()">
+                            <input name="triciptal" #triciptal="ngModel" [(ngModel)]="newEvaluation.triciptal" type="number" (focus)="$event.target.select()"
+                             cdkTrapFocus cdkTrapFocusAutoCapture>
                         </td>
                         <td *ngIf="pointer>=0 && editPointer!=0">{{evaluation[pointer].triciptal | number: '': locale}}</td>
                         <td *ngIf="editPointer==0 && editAv">
-                            <input name="triciptal" #triciptal="ngModel" [(ngModel)]="newEvaluation.triciptal" type="number" (focus)="$event.target.select()">
+                            <input name="triciptal" #triciptal="ngModel" [(ngModel)]="newEvaluation.triciptal" type="number" (focus)="$event.target.select()"
+                             cdkTrapFocus cdkTrapFocusAutoCapture>
                         </td>
                         <td *ngIf="addEval">
                             <input name="triciptal" #triciptal="ngModel" [(ngModel)]="newEvaluation.triciptal" type="number"
-                            (change)="getSomatorio()" (focus)="$event.target.select()">
+                            (change)="getSomatorio()" (focus)="$event.target.select()"
+                             cdkTrapFocus cdkTrapFocusAutoCapture>
                         </td>
                     </tr>
                     <tr>
