--- a/src/app/avaliation/flexibilidade/banco-wells-dillon/banco-wells-dillon.component.html
+++ b/src/app/avaliation/flexibilidade/banco-wells-dillon/banco-wells-dillon.component.html
@@ -24,15 +24,16 @@
                             <td *ngIf="pointer>=1 && !addEval && editPointer!=1">{{evaluation[pointer-1].flex}}</td>
                             <td *ngIf="editPointer==1 && editAv">
                                 <input name="flex" #flex="ngModel" [(ngModel)]="newEvaluation.flex" type="number"
-                                    (focus)="$event.target.select()">
+                                    (focus)="$event.target.select()" cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                             <td *ngIf="pointer>=0 && editPointer!=0">{{evaluation[pointer].flex}}</td>
                             <td *ngIf="editPointer==0 && editAv">
                                 <input name="flex" #flex="ngModel" [(ngModel)]="newEvaluation.flex" type="number"
-                                    (focus)="$event.target.select()">
+                                    (focus)="$event.target.select()" cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                             <td *ngIf="addEval">
-                                <input name="flex" #flex="ngModel" [(ngModel)]="newEvaluation.flex" type="number">
+                                <input name="flex" #flex="ngModel" [(ngModel)]="newEvaluation.flex" type="number"
+                                cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                         </tr>
                         <tr>
