--- a/src/app/avaliation/frm/frm.component.html
+++ b/src/app/avaliation/frm/frm.component.html
@@ -31,16 +31,16 @@
                             </td>
                             <td *ngIf="editPointer==1 && editAv">
                                 <input name="agachamento" #agachamento="ngModel" [(ngModel)]="newEvaluation.agachamento"
-                                    type="number" (focus)="$event.target.select()">
+                                    type="number" (focus)="$event.target.select()" cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                             <td *ngIf="pointer>=0 && editPointer!=0">{{evaluation[pointer].agachamento}}</td>
                             <td *ngIf="editPointer==0 && editAv">
                                 <input name="agachamento" #agachamento="ngModel" [(ngModel)]="newEvaluation.agachamento"
-                                    type="number" (focus)="$event.target.select()">
+                                    type="number" (focus)="$event.target.select()" cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                             <td *ngIf="addEval">
                                 <input name="agachamento" #agachamento="ngModel" [(ngModel)]="newEvaluation.agachamento"
-                                    type="number">
+                                    type="number" cdkTrapFocus cdkTrapFocusAutoCapture>
                             </td>
                         </tr>
                         <tr>
